--- a/css/micss.css
+++ b/css/micss.css
@@ -11,11 +11,15 @@ body{
 
 main{
     min-height: 792px;
-    width: 1404px;
-    background-color: white;
-    box-shadow: 0px 0px 6px #ff0000;
+    width: 100%;
+    background: linear-gradient(to right, #cbcbcb, white, white, white, white, #cbcbcb);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
     overflow: hidden;
-    display: table;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header{
@@ -34,20 +38,18 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 2px solid red;
     z-index: 200;
 }
 
 #nav a{
-    padding: 53px 80px; 
+    padding: 52.8px 80px; 
     text-decoration: none;
-    color: #5c5c5c;
+    color: #b4b4b4;
     background: linear-gradient(to right, rgb(245, 245, 245), white, white, white, white, white, rgb(245, 245, 245));
-    border-bottom: px solid red;
 }
 
 #nav a:hover{
-    background: linear-gradient(to right, #eb0000, red, red, red, red, #eb0000);
+    background: linear-gradient(to right, #740000, #830000, #830000, #830000, #830000, #740000);
     color: white;
 }
 
@@ -62,23 +64,41 @@ header{
 #logo img{
     width: 100%;
     height: auto;
+    filter: brightness(60%);
 }
 
 #user{
-    padding: 14px;
     position: absolute;
     right: 0px;
     top: 0px;
     height: 140px;
-    width: 200px;
+    width: 230px;
     border-left: 1px solid #efefef;
     background-color: white;
-    color: red;
+    color: #747474;
+    font-size: 13px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    padding: 14px;
+}
+
+#user h2{
+    font-size: 19px;
+    color: #a8a8a8;
+    font-weight: bold;
+    padding: 0px;
+    margin: 0px;
+}
+
+#form1{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    font-size: 13px;
 }
 
 #user input{
@@ -97,9 +117,9 @@ header{
 }
 
 #user button:hover{
-    background-color: red;
+    background-color: #830000;
     color: white;
-    border: 1px solid red;
+    border: 1px solid #830000;
 }
 
 #icono{
@@ -107,8 +127,8 @@ header{
     width: 50px;
     height: 140px;
     top: 0px;
-    right: 200px;
-    background-color: #ff0000;
+    right: 230px;
+    background-color: #830000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -123,72 +143,43 @@ header{
     justify-content: space-between;
     align-items: center;
     margin: 0px;
-    border-bottom: 3px solid red;
-    border-top: 3px solid red;
-    border-right: 3px solid red;
-    background-color: white;
+    background-color: #830000;
     z-index: 100;
 }
 
 #cat a{
-    padding: 30px 63px;
-    border: 0px 1px solid #efefef;
-    color: #959595;
-    background-color: #ffffff;
+    padding: 28px 63px;
+    color: #e2e2e2;
+    background:#830000;
     font-size: 16px;
     z-index: 109;
     text-decoration: none;
+    font-weight: bold;
+    border: 3px solid #740000;
 }
 
 #cat a:hover{
-    background-color: #fcfcfc;
-    color: #ff0000;
-    font-size: 18px;
+    color: #ffffff;
+    background:#710000;
 }
 
 #cat span{
-    padding: 28.9px 61px;
+    padding: 28px 61px;
     color: white;
-    background-color: red;
-    font-size: 18px;
-    border-top: 2px solid red;
-}
-
-#productos{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    min-height: 800px;
-    padding: 30px;
-    background-color: aqua;
+    background-color: #740000;
+    font-size: 16px;
+    border: 3px solid #740000;
 }
 
 #prod{
-    width: 100%;
+    width: 1404px;
     height: 100%;
     padding: 30px;
     padding:30px 60px;
-}
-
-#prod2{
-    width: 100%;
-    height: 100%;
-    padding: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: 0px 249px;
 }
 
 #prod p{
-    color: #696969;
-    text-align: justify;
-    font-size: 20px;
-    padding: 40px;
-}
-
-#prod2 p{
     color: #696969;
     text-align: justify;
     font-size: 20px;
@@ -200,15 +191,9 @@ header{
     height: 200px;
 }
 
-#prod2 img{
-    max-width: auto;
-    height: 200px;
-}
-
 #prod div{
     height: 670px;
     border: 1px solid #e8e8e8;
-    background-color: #fcfcfc;
     box-shadow: 0px 0px 10px grey;
     display: flex;
     flex-direction: column;
@@ -218,90 +203,23 @@ header{
     margin: 10px 10px;
     padding: 20px 0px;
     float: left;
-    background-color: #f8f8f8;
+    background-color: #d8d8d8;
     border-radius: 10px;
     margin-bottom: 50px;
     width: 300px;
-}
-
-#prod2 div{
-    width: 300px;
-    min-height: 500px;
-    border: 1px solid #e8e8e8;
-    background-color: #fcfcfc;
-    box-shadow: 0px 0px 10px grey;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    z-index: 100;
-    margin: 23px;
-    padding: 20px;
-    background-color: #f8f8f8;
-    border-radius: 10px;
 }
 
 #prod div a{
     width: 200px;
     height: 300px;
     border: 1px solid #e8e8e8;
-    background-color: #fcfcfc;
+    background-color: #ffffff;
     box-shadow: 0px 0px 10px grey;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     z-index: 100;
-}
-
-#prod2 div a h3{
-    color: #c7c7c7;
-    font-size: 30px;
-    margin: 10px 0px 18px 0px;
-}
-
-#prod2 div a h4{
-    color: #18be32;
-    font-size: 30px;
-    background-color: #f5f5f5;
-    border-radius: 50%;
-    padding: 0px 10px;
-}
-
-#prod2 a span{
-    text-align: justify;
-    font-size: 12px;
-    color: grey;
-    padding: 20px 20px 0px 20px;
-    display: none;
-}
-
-#prod2 a{
-    height: 70%;
-    width: 100%;
-    text-decoration: none;
-}
-
-#prod2 div p{
-    font-size: 18px;
-    color: grey;
-    padding: 20px;
-    background-color: #fcfcfc;
-    text-align: justify;
-}
-
-#prod2 div a{
-    width: 300px;
-    min-height: 500px;
-    border: 1px solid #e8e8e8;
-    background-color: #fcfcfc;
-    box-shadow: 0px 0px 10px grey;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    z-index: 100;
-    margin: 23px;
-    float: left;
 }
 
 #prod div a{
@@ -345,6 +263,7 @@ header{
     height: 70%;
     width: 100%;
     text-decoration: none;
+    filter: brightness(99%)
 }
 
 #prod div p{
@@ -358,8 +277,8 @@ header{
 footer{
     height: 80px;
     width: 100%;
-    box-shadow: 0px 0px 20px #5c5c5c;
-    background-color: #ff2525;
+    box-shadow: 0px 0px 20px #000000;
+    background-color: #830000;
     margin: 0px;
     padding: 0px;
     bottom: 0px;
@@ -367,7 +286,8 @@ footer{
     bottom: 0px;
 }
 
-#desc{
+#prod #desc{
+    height: 682px;
     width: 720px;
     border: 1px solid #e8e8e8;
     background-color: #fcfcfc;
@@ -377,15 +297,18 @@ footer{
     justify-content: space-around;
     align-items: center;
     z-index: 100;
-    margin: 23px 60px;
+    margin: 0px 60px;
+    margin-top: 6px;
     padding: 40px 70px;
     float: left;
     position: relative;
     left: 100px;
+    border-radius: 20px;
 }
 
 #desc h2{
-    color: #ff2626;
+    color: #d10000;
+    font-weight: bold;
 }
 
 #desc h3{
@@ -425,9 +348,9 @@ button{
     color: #ffffff;
     background-color: #ffffff;
     border-radius: 6px;
-    border: 4px solid #ff0000;
+    border: 4px solid #a8a8a8;
     font-size: 30px;
-    box-shadow: 0px 0px 14px red;
+    box-shadow: 0px 0px 14px #9b9b9b;
     font-size: 32px;
     font-weight: bold;
     display: flex;
@@ -438,10 +361,12 @@ button{
 button span{
     font-size: 32px;
     font-weight: bold;
-    color: #c6c6c6;
+    color: #b2b2b2;
 }
 
 button:hover{
-    background-color: #ff0000;
+    background-color: #830000;
     color: white;
+    box-shadow: 0px 0px 14px #830000;
+    border: 4px solid #830000;
 }
