--- a/css/micss.css
+++ b/css/micss.css
@@ -42,7 +42,7 @@ header{
 }
 
 #nav a{
-    padding: 52.8px 80px; 
+    padding: 53px 80px; 
     text-decoration: none;
     color: #b4b4b4;
     background: linear-gradient(to right, rgb(245, 245, 245), white, white, white, white, white, rgb(245, 245, 245));
@@ -193,7 +193,7 @@ header{
 
 #prod div{
     height: 670px;
-    border: 1px solid #e8e8e8;
+    border: 1px solid #767676;
     box-shadow: 0px 0px 10px grey;
     display: flex;
     flex-direction: column;
@@ -210,7 +210,7 @@ header{
 }
 
 #prod div a{
-    width: 200px;
+    width: 100%;
     height: 300px;
     border: 1px solid #e8e8e8;
     background-color: #ffffff;
@@ -223,7 +223,7 @@ header{
 }
 
 #prod div a{
-    width: 300px;
+    width: 100%;
     min-height: 500px;
     border: 1px solid #e8e8e8;
     background-color: #fcfcfc;
@@ -369,4 +369,144 @@ button:hover{
     color: white;
     box-shadow: 0px 0px 14px #830000;
     border: 4px solid #830000;
+}
+
+#modulos{
+    position: fixed;
+    width: 276px;
+    height: 640px;
+    right: 20px;
+    top: 262px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#modulos div h2{
+    padding: 0px;
+    margin: 0px;
+    color: #efefef;
+    height: 25%;
+    font-size: 24px;
+    padding: 1.8%;
+}
+
+#modulos div div{
+    border-top: 2px solid #bcbcbc;
+}
+
+#modulocat{
+    width: 100%;
+    height: 20%;
+    background: #830000;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items: center;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px grey;
+}
+
+#modulonav{
+    width: 100%;
+    height: 20%;
+    background: #830000;
+    margin-bottom: 5%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items: center;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px grey;
+}
+
+#moduloprod{
+    width: 100%;
+    height: 20%;
+    background: #830000;
+    margin-bottom: 5%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items: center;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px grey;
+}
+
+#modulostock{
+    width: 100%;
+    height: 10%;
+    background: #830000;
+    margin-bottom: 5%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items: center;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px grey;
+}
+
+.editar{
+    background: #e5e5e5;
+    height: 32px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #5d5d5d;
+    font-weight: bold;
+}
+
+.editar:hover{
+    background: #830000;
+    color: white;
+}
+
+.formprod{
+    width: 100%;
+    height: 80%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.formprod input{
+    width: 300px;
+    height: 50px;
+    padding: 8px;
+    box-shadow: 0px 0px 8px grey;
+    margin-bottom: 30px;
+    border-radius: 8px;
+}
+
+.formprod select{
+    width: 300px;
+    height: 50px;
+    padding: 8px;
+    box-shadow: 0px 0px 8px grey;
+    margin-bottom: 30px;
+    border-radius: 8px;
+}
+
+.formprod select option{
+    color: #575757;
 }
